# TruckTrack

./: README.md  pyproject.toml  setup.cfg
infra/: .env.example  docker-compose.yml
src/: pyproject.toml
src/api/: constants.py  filters.py  schemas.py  serializers.py  urls.py  utils.py  views.py
src/api/serializers/: cargo_serializers.py  location_serializers.py  truck_serializers.py
src/api/tests/: factories.py  tests_cargo.py  tests_locations.py  tests_trucks.py
src/config/: celery.py  settings.py  urls.py
src/data/: locations.csv  trucks.json
src/transport/: admin.py  apps.py  constants.py  models.py  signals.py  tasks.py
src/transport/management/commands/: load_data.py  load_locations.py
src/transport/migrations/: 0001_initial.py
